# Hackathon-0-Personal-AI-Employee

bronze-tier/: .env.example  .gitignore  README.md  agent.py  pyproject.toml  watcher.py
bronze-tier/.claude/: settings.local.json
bronze-tier/DOCS/: ABOUT.md  CHANGELOG.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md
bronze-tier/History/: PHR_Session_2026-02-15.md
bronze-tier/Test_Scripts/: test_workflow.py
bronze-tier/Vault/: Company_Handbook.md  Dashboard.md
bronze-tier/Vault/Done/: Brand_Voice_Guide.md  Marketing_Strategy.docx  Newsletter_Draft.txt  Project_Budget.docx  Silver_Tier_Roadmap.md  Status_Update.txt
bronze-tier/skills/file-triage/: SKILL.md
